<resources>
    <string name="app_name">tutorCoffee</string>
    <string name="title_selector">BrewMaster</string>
    <string name="desc_title">Your ultimate solution for a perfect\n cup of coffee every time!</string>

    <string name="welcome_landing">Hey,\nWelcome Back !!</string>
    <string name="create_account">Create\nNew Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="get_started">Get Started</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="desc_signup">Dont have an account? <font color="#A64B2A"><b>Sign Up Here!!</b></font></string>
    <string name="forgot">Forgot Password ?</string>
    <string name="type_email">Type your email.. </string>
    <string name="type_password">Type your password.. </string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="type_confirm_pass">Confirm your password..</string>
    <string name="already_have">Already have an account? <font color="#A64B2A"><b>Sign In Here!!</b></font></string>

    <string name="lets_making_coffee">Let’s making coffee with our method</string>

    <string name="sample_name">WELCOME\nSAYYIDUSY SYAUQI</string>
    <string name="choose_method">Choose Method !</string>
    <string name="aeropress">Aeropress</string>
    <string name="frenchpress">French Press</string>
    <string name="chemex">Chemex</string>
    <string name="cupping">Cupping</string>

    <string name="coffee">Coffee</string>
    <string name="water">Water</string>
    <string name="temprature">Temprature</string>
    <string name="method">Method</string>
    <string name="grind">Range of Grind</string>
    <string name="time">Preparation Time</string>
    <string name="step">Step by Step</string>
    <string name="make">Make Coffee</string>
    <string name="add">Add Recipee</string>
    <string name="add_more">Add More Recipee</string>

    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="chemex_judul">Chemex</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="aeropress1">AeroPress basic recipe</string>
    <string name="aeropress_judul"><b>AEROPRESS COFFEE BREWING</b></string>
    <string name="timer">2:30 Mins</string>
    <string name="frenchpress_judul">French Press</string>
    <string name="fav_judul">Favourite</string>
    <string name="myRecipe_judul">My Recipe</string>

</resources>