<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_bg">


    <TextView
        android:id="@+id/tv_title_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/welcome_landing"
        android:textColor="@color/brown_secondary"
        android:textSize="@dimen/text_35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_483dp"
        android:background="@drawable/bg_coffee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_signin"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="295dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/type_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/corner_8dp"
        android:textColor="#8e8e8e"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="340dp" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="414dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/type_password"
        android:inputType="textPassword"
        android:padding="@dimen/corner_8dp"
        android:textColor="#8e8e8e"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="455dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="523dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:background="@drawable/button_splash"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/desc_signup"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin" />


</androidx.constraintlayout.widget.ConstraintLayout>