<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_bg"
    tools:context=".authentication.RegisterActivity">


    <TextView
        android:id="@+id/tv_title_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_account"
        android:textColor="@color/brown_secondary"
        android:textSize="@dimen/text_35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/bg_coffee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_signin"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Username"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_username"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="Type your username.."
        android:inputType="text"
        android:padding="@dimen/corner_8dp"
        android:textColor="#8e8e8e"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Email"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_Email"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/type_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/corner_8dp"
        android:textColor="#8e8e8e"
        app:layout_constraintEnd_toEndOf="@+id/tv_email"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_Password"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/type_password"
        android:inputType="textPassword"
        android:padding="@dimen/corner_8dp"
        android:textColor="#8e8e8e"
        app:layout_constraintBottom_toTopOf="@+id/tv_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/et_Email"
        app:layout_constraintStart_toStartOf="@+id/tv_password" />

    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/confirm_pass"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_confirm_password"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/type_confirm_pass"
        android:inputType="textPassword"
        android:padding="@dimen/corner_8dp"
        android:textColor="#8e8e8e"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="@+id/et_Password"
        app:layout_constraintStart_toStartOf="@+id/tv_confirm_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_splash"
        android:text="@string/sign_up"
        style="@style/ButtonGrey"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/already_have"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>